file upload added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=officeManagement
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/office_management
 spring.datasource.username=postgres
