hikari added for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@ spring.servlet.multipart.max-request-size=2MB
 spring.datasource.url=jdbc:postgresql://localhost:5432/office_management
 spring.datasource.username=postgres
 spring.datasource.password=123456
+hikari.maximum-pool-size: 10
+hikari.minimum-idle: 5
+hikari.idle-timeout: 30000
+hikari.connection-timeout: 20000
+hikari.max-lifetime: 1800000
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
