migration some error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,43 @@
 spring.application.name=officeManagement
 
+# ===============================
+# Multipart (File Upload)
+# ===============================
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
+# ===============================
+# Datasource (PostgreSQL)
+# ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/office_management
 spring.datasource.username=postgres
 spring.datasource.password=123456
-hikari.maximum-pool-size: 10
-hikari.minimum-idle: 5
-hikari.idle-timeout: 30000
-hikari.connection-timeout: 20000
-hikari.max-lifetime: 1800000
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+# ===============================
+# HikariCP Connection Pool
+# ===============================
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1800000
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# ===============================
+# Flyway
+# ===============================
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 
-
+# ===============================
+# Docker
+# ===============================
 spring.docker.compose.enabled=false
