--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,8 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>11.20.3</version>
+            <scope>compile</scope>
         </dependency>
 
 
