--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,15 +27,23 @@ spring.datasource.hikari.max-lifetime=1800000
 # ===============================
 # JPA / Hibernate
 # ===============================
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ===============================
-# Flyway
+# Flyway (ENABLE)
 # ===============================
 spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
+
+# ===============================
+# (Optional) Debug
+# ===============================
+logging.level.org.flywaydb=DEBUG
+
 
 # ===============================
 # Docker
