--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,11 @@ spring.datasource.hikari.max-lifetime=1800000
 # ===============================
 # JPA / Hibernate
 # ===============================
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.defer-datasource-initialization=true
 
 # ===============================
 # Flyway (ENABLE)
@@ -37,6 +39,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
 spring.flyway.validate-on-migrate=true
 
 # ===============================
@@ -49,3 +52,4 @@ logging.level.org.flywaydb=DEBUG
 # Docker
 # ===============================
 spring.docker.compose.enabled=false
+
